--- a/index.mdx
+++ b/index.mdx
@@ -1,97 +1,37 @@
 ---
 title: "Introduction"
-description: "Welcome to the new home for your documentation"
+description: "Welcome to Symphony, Inc. documentation, in here you can find all the necessary endpoints for your app."
 ---
 
 ## Setting up
 
 Get your documentation site up and running in minutes.
 
-<Card
-  title="Start here"
-  icon="rocket"
-  href="/quickstart"
-  horizontal
->
-  Follow our three step quickstart guide.
+<Card title="Start here" icon="rocket" horizontal href="/quickstart">
+  Follow our quickstart guide to start fetching data.
 </Card>
 
-## Make it yours
+## Check some examples
 
-Design a docs site that looks great and empowers your users.
-
-<Columns cols={2}>
-  <Card
-    title="Edit locally"
-    icon="pen-to-square"
-    href="/development"
-  >
-    Edit your docs locally and preview them in real time.
-  </Card>
-  <Card
-    title="Customize your site"
-    icon="palette"
-    href="/essentials/settings"
-  >
-    Customize the design and colors of your site to match your brand.
-  </Card>
-    <Card
-    title="Set up navigation"
-    icon="map"
-    href="/essentials/navigation"
-  >
-    Organize your docs to help users find what they need and succeed with your product.
-  </Card>
-  <Card
-    title="API documentation"
-    icon="terminal"
-    href="/api-reference/introduction"
-  >
-    Auto-generate API documentation from OpenAPI specifications.
-  </Card>
-</Columns>
-
-## Create beautiful pages
-
-Everything you need to create world-class documentation.
+These are some examples to test our API and see what you can build
 
 <Columns cols={2}>
-  <Card
-    title="Write with MDX"
-    icon="pen-fancy"
-    href="/essentials/markdown"
-  >
-    Use MDX to style your docs pages.
+  <Card title="Stock market data" icon="pen-to-square" href="/development">
+     Fetch market data for a specific ticker and retrieve the price movements and key company data.
   </Card>
-  <Card
-    title="Code samples"
-    icon="code"
-    href="/essentials/code"
-  >
-    Add sample code to demonstrate how to use your product.
+  <Card title="Prediction Markets mention" icon="palette" href="/essentials/settings">
+    Find company mentions in predictions markets, aggregate the events and see the potential outcomes.
   </Card>
-  <Card
-    title="Images"
-    icon="image"
-    href="/essentials/images"
-  >
-    Display images and other media.
+  <Card title="Mentions alert" icon="map" href="/essentials/navigation">
+    Set alerts for negative mentions of companies with a cron job.
   </Card>
-  <Card
-    title="Reusable snippets"
-    icon="recycle"
-    href="/essentials/reusable-snippets"
-  >
-    Write once and reuse across your docs.
+  <Card title="Cross market validation" icon="terminal" href="/api-reference/introduction">
+    Check for events in Polymarket and Kalshi using plain english.
   </Card>
 </Columns>
 
 ## Need inspiration?
 
-<Card
-  title="See complete examples"
-  icon="stars"
-  href="https://mintlify.com/customers"
->
-  Browse our showcase of exceptional documentation sites.
+<Card title="See complete examples" icon="stars" href="https://mintlify.com/customers">
+  If you are looking for inspiration, check in here what the community is building now.
 </Card>
